@@ -386,3 +386,10 @@ Feature: Multi Elements
     And the action for form 1 should be "form1"
     And the action for form 2 should be "form2"
     And the action for form 3 should be "form3"
+
+  Scenario: Selecting list items based on a class declaration
+    When I select the list items using the generated method
+    Then I should have 3 list items
+    And the text for list item 1 should be "Item One"
+    And the text for list item 2 should be "Item Two"
+    And the text for list item 3 should be "Item Three"
